--- a/apps/web/.env.local
+++ b/apps/web/.env.local
@@ -1,5 +1,7 @@
-# Backend base URL
-NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
+# Backend base URL - use relative path to support network access
+# For localhost: http://localhost:4000
+# For network: the frontend will auto-detect and use same host with port 4000
+NEXT_PUBLIC_API_BASE_URL=
 
 # For development convenience only (do not use in production)
 NEXT_PUBLIC_ADMIN_TOKEN=changeme-admin-token
