--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,19 +18,21 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^7.0.12",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.30",
-    "@types/morgan": "^1.9.7",
     "prisma": "^5.16.2",
     "tsx": "^4.15.7",
     "typescript": "^5.6.3"
