--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,10 +29,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.14",
     "prisma": "^5.16.2",
     "tsx": "^4.15.7",
     "typescript": "^5.6.3"
