fix: Add build output logging to Dockerfiles
Capture npm build output to build.log file so we can see the actual
error instead of just exit code 1. This will help diagnose what's
failing in the Docker container.

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -6,39 +6,35 @@ WORKDIR /app/apps/server
 # Copy server package files
 COPY apps/server/package*.json ./
 
-# Install all dependencies (including devDependencies for build)
-RUN npm install
+# Install all dependencies
+RUN npm install 2>&1
 
 # Copy prisma schema
 COPY apps/server/prisma ./prisma
 
 # Generate Prisma client
-RUN npx prisma generate
+RUN npx prisma generate 2>&1
 
 # Copy source files
 COPY apps/server/src ./src
 COPY apps/server/tsconfig.json ./
 
-# Build TypeScript
-RUN npm run build
+# Build TypeScript - capture full output
+RUN npm run build 2>&1 | tee build.log && echo "Build successful" || (cat build.log && echo "Build failed!" && exit 1)
 
 # Production stage
 FROM node:18-slim AS production
 
 WORKDIR /app/apps/server
 
-# Copy node_modules from builder to avoid reinstalling
 COPY --from=builder /app/apps/server/node_modules ./node_modules
 COPY --from=builder /app/apps/server/dist ./dist
 COPY --from=builder /app/apps/server/prisma ./prisma
 COPY apps/server/package*.json ./
 
-# Expose port
 EXPOSE 4000
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
   CMD node -e "require('http').get('http://localhost:4000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" || exit 1
 
-# Run migrations and start server
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/server.js"]
