--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app/apps/web
 COPY apps/web/package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install 2>&1
 
 # Copy source files
 COPY apps/web ./
@@ -18,15 +18,15 @@ ENV NEXT_TELEMETRY_DISABLED=1
 ENV NEXT_PUBLIC_DEMO_MODE=true
 ENV NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
 
-# Build Next.js
-RUN npm run build
+# Build Next.js - capture full output
+RUN npm run build 2>&1 | tee build.log && echo "Build successful" || (cat build.log && echo "Build failed!" && exit 1)
 
 # Production stage
 FROM node:18-slim AS production
 
 WORKDIR /app/apps/web
 
-# Copy node_modules and built files from builder
+# Copy artifacts from builder
 COPY --from=builder /app/apps/web/node_modules ./node_modules
 COPY --from=builder /app/apps/web/.next ./.next
 COPY --from=builder /app/apps/web/public ./public
@@ -41,16 +41,12 @@ RUN chown -R nextjs:nextjs /app/apps/web
 
 USER nextjs
 
-# Expose port
 EXPOSE 3000
 
-# Set runtime environment
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
   CMD node -e "require('http').get('http://localhost:3000', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" || exit 1
 
-# Start Next.js
 CMD ["npm", "start"]
