--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,19 +48,11 @@ services:
       ADMIN_TOKEN: ${ADMIN_TOKEN}
       DEMO_MODE: ${DEMO_MODE:-false}
     depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - postgres
+      - redis
     networks:
       - equiyield-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
 
   web:
     build:
@@ -72,20 +64,12 @@ services:
       NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:4000}
       NEXT_PUBLIC_DEMO_MODE: ${DEMO_MODE:-false}
     depends_on:
-      server:
-        condition: service_healthy
+      - server
     networks:
       - equiyield-network
       - net
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
     labels:
-      # Traefik labels (optional - for alternative to NPM)
       - "traefik.enable=true"
       - "traefik.http.routers.equiyield.rule=Host(`equiyield.sanchez.ph`)"
       - "traefik.http.routers.equiyield.entrypoints=websecure"
