fix: Use pre-built artifacts in Docker instead of building

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -2,12 +2,14 @@ FROM node:18
 
 WORKDIR /app
 
+# Copy everything pre-built
 COPY apps/server/package*.json ./
-RUN npm install
+COPY apps/server/node_modules ./node_modules
+COPY apps/server/dist ./dist
+COPY apps/server/prisma ./prisma
 
-COPY apps/server/ ./
-RUN npx prisma generate
-RUN npm run build
+# Generate Prisma in case node_modules/.prisma is missing
+RUN npx prisma generate || true
 
 EXPOSE 4000
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/server.js"]
