fix: Build Dockerfiles with workspace context from root

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -2,18 +2,20 @@ FROM node:18
 
 WORKDIR /app
 
-# Install dependencies
-COPY apps/server/package*.json ./
-RUN npm install 2>&1 | tee /tmp/npm-install.log || (cat /tmp/npm-install.log && exit 1)
+# Copy root workspace files
+COPY package*.json ./
+COPY apps/server/package*.json ./apps/server/
 
-# Copy source
-COPY apps/server/ ./
+# Install all workspace dependencies from root
+RUN npm install
 
-# Generate Prisma
-RUN npx prisma generate 2>&1 | tee /tmp/prisma.log || (cat /tmp/prisma.log && exit 1)
+# Copy server source
+COPY apps/server/ ./apps/server/
 
-# Build TypeScript with verbose output
-RUN npm run build 2>&1 | tee /tmp/build.log || (cat /tmp/build.log && exit 1)
+# Generate Prisma and build from workspace
+WORKDIR /app/apps/server
+RUN npx prisma generate
+RUN npm run build
 
 EXPOSE 4000
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/server.js"]
