fix: Use npx tsc directly instead of npm run build

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY package*.json ./
 COPY apps/server/package*.json ./apps/server/
 
-# Install all workspace dependencies from root
+# Install all workspace dependencies INCLUDING devDependencies (needed for build)
 RUN npm install
 
 # Copy server source
@@ -15,7 +15,7 @@ COPY apps/server/ ./apps/server/
 # Generate Prisma and build from workspace
 WORKDIR /app/apps/server
 RUN npx prisma generate
-RUN npm run build
+RUN npx tsc -p tsconfig.json
 
 EXPOSE 4000
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/server.js"]
