fix: Pass NEXT_PUBLIC_API_BASE_URL as build arg for Next.js

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -58,6 +58,8 @@ services:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+      args:
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:4000}
     container_name: equiyield-web
     environment:
       NODE_ENV: production
