--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -70,12 +70,9 @@ services:
     networks:
       - equiyield-network
       - net
+    ports:
+      - "3000:3000"
     restart: unless-stopped
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.equiyield.rule=Host(`equiyield.sanchez.ph`)"
-      - "traefik.http.routers.equiyield.entrypoints=websecure"
-      - "traefik.http.routers.equiyield.tls.certresolver=letsencrypt"
 
 networks:
   equiyield-network:
