--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -53,6 +53,8 @@ services:
     networks:
       - equiyield-network
       - net
+    ports:
+      - "4000:4000"
     restart: unless-stopped
 
   web:
