--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
